traefik-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
spec:
  rules:
  - host: hello.k8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
